force-app/main/default/objects/whosViewing__e/whosViewing__e.object-meta.xml
<CustomObject>
    <label>whosViewing</label>
    <pluralLabel>whosViewing</pluralLabel>
</CustomObject>