force-app/main/default/objects/whosViewing__e/fields/responseTo__c.field-meta.xml
<CustomField>
    <fullName>responseTo__c</fullName>
    <label>responseTo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>