force-app/main/default/objects/whosViewing__e/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>