force-app/main/default/objects/whosViewing__e/fields/timestamp__c.field-meta.xml
<CustomField>
    <fullName>timestamp__c</fullName>
    <label>timestamp</label>
    <type>DateTime</type>
</CustomField>