force-app/main/default/objects/whosViewing__e/fields/userId__c.field-meta.xml
<CustomField>
    <fullName>userId__c</fullName>
    <label>userId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>